@@ -1920,7 +1920,99 @@ Obj FuncMappingPermSetSetNC(Obj self, Obj src, Obj dst)
     }
     return out;
 } 
-    
+ 
+#define DEGREELIMITONSTACK 512
+
+Obj FuncMappingPermListListNC(Obj self, Obj src, Obj dst)
+{
+    Int l;
+    Int i;
+    Int d;
+    Int next;
+    Obj out;
+    Obj tabdst, tabsrc;
+    Int x;
+    Int mytabs[DEGREELIMITONSTACK];
+    Int mytabd[DEGREELIMITONSTACK];
+
+    PLAIN_LIST(src);
+    PLAIN_LIST(dst);
+    l = LEN_PLIST(src);
+    if (l != LEN_PLIST(dst)) {
+        ErrorQuit( "the lists must have equal length", 0L, 0L );
+        return 0L;
+    }
+    d = 0;
+    for (i = 1;i <= l;i++) {
+        x = INT_INTOBJ(ELM_PLIST(src,i));
+        if (x > d) d = x;
+    }
+    for (i = 1;i <= l;i++) {
+        x = INT_INTOBJ(ELM_PLIST(dst,i));
+        if (x > d) d = x;
+    }
+    if (d <= DEGREELIMITONSTACK) {
+        /* Small case where we work on the stack: */
+        memset(&mytabs,0,sizeof(mytabs));
+        memset(&mytabd,0,sizeof(mytabd));
+        for (i = 1;i <= l;i++) {
+            mytabs[INT_INTOBJ(ELM_PLIST(src,i))] = i;
+        }
+        for (i = 1;i <= l;i++) {
+            mytabd[INT_INTOBJ(ELM_PLIST(dst,i))] = i;
+        }
+        out = NEW_PLIST(T_PLIST_CYC_NSORT,d);
+        SET_LEN_PLIST(out,d);
+        /* No garbage collection from here ... */
+        next = 1;
+        for (i = 1;i <= d;i++) {
+            if (mytabs[i]) {   /* if i is in src */
+                SET_ELM_PLIST(out,i, ELM_PLIST(dst,mytabs[i]));
+            } else {
+                /* Skip things in dst: */
+                while (mytabd[next]) next++;
+                SET_ELM_PLIST(out,i,INTOBJ_INT(next));
+                next++;
+            }
+        }
+        /* ... to here! No CHANGED_BAG needed since this is a new object! */
+    } else {
+        /* Version with intermediate objects: */
+
+        tabsrc = NEW_PLIST(T_PLIST,d);
+        SET_LEN_PLIST(tabsrc,0);
+        /* No garbage collection from here ... */
+        for (i = 1;i <= l;i++) {
+            SET_ELM_PLIST(tabsrc,INT_INTOBJ(ELM_PLIST(src,i)),INTOBJ_INT(i));
+        }
+        /* ... to here! No CHANGED_BAG needed since this is a new object! */
+        tabdst = NEW_PLIST(T_PLIST,d);
+        SET_LEN_PLIST(tabdst,0);
+        /* No garbage collection from here ... */
+        for (i = 1;i <= l;i++) {
+            SET_ELM_PLIST(tabdst,INT_INTOBJ(ELM_PLIST(dst,i)),INTOBJ_INT(i));
+        }
+        /* ... to here! No CHANGED_BAG needed since this is a new object! */
+        out = NEW_PLIST(T_PLIST_CYC_NSORT,d);
+        SET_LEN_PLIST(out,d);
+        /* No garbage collection from here ... */
+        next = 1;
+        for (i = 1;i <= d;i++) {
+            if (ELM_PLIST(tabsrc,i)) {   /* if i is in src */
+                SET_ELM_PLIST(out,i,
+                    ELM_PLIST(dst,INT_INTOBJ(ELM_PLIST(tabsrc,i))));
+            } else {
+                /* Skip things in dst: */
+                while (ELM_PLIST(tabdst,next)) next++;
+                SET_ELM_PLIST(out,i,INTOBJ_INT(next));
+                next++;
+            }
+        }
+        /* ... to here! No CHANGED_BAG needed since this is a new object! */
+    }
+    return out;
+}
+
 
 /*F * * * * * * * * * * * * * initialize package * * * * * * * * * * * * * * */
 
@@ -2016,6 +2108,10 @@ static StructGVarFunc GVarFuncs [] = {
   { "MappingPermSetSetNC_C", 2, "src, dst",
     FuncMappingPermSetSetNC,
     "pkg/orb/src/orb.c:FuncMappingPermSetSetNC" },
+
+  { "MappingPermListListNC_C", 2, "src, dst",
+    FuncMappingPermListListNC,
+    "pkg/orb/src/orb.c:FuncMappingPermListListNC" },
 
   { 0 }
 
